--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"url": "http://github.com/yuffster/discord-web"
 	},
 	"dependencies": {
-		"mootools":">=1.3.2",
+		"mootools-express":">=1.4.1",
 		"socket.io":">=0.8.7",
 		"optimist":">=0.3.1",
 		"express":">=2.5.6",
