--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"url": "http://github.com/yuffster/discord-web"
 	},
 	"dependencies": {
+		"discord-engine":">=0.3.0",
 		"mootools-express":">=1.4.1",
 		"socket.io":">=0.8.7",
 		"optimist":">=0.3.1",
