--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
 	"name":"discord-web",
 	"description":"Web client for the Discord MUD Engine.",
-	"version":"0.2.0",
+	"version":"0.4.0",
 	"repository": {
 		"type": "git",
 		"url": "http://github.com/yuffster/discord-web"
 	},
 	"dependencies": {
-		"discord-engine":">=0.3.0",
+		"discord":">=0.4.0",
 		"mootools-express":">=1.4.1",
 		"socket.io":">=0.8.7",
 		"optimist":">=0.3.1",
