--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
 		"url": "http://github.com/yuffster/discord-web"
 	},
 	"dependencies": {
-		"discord":">=0.7.1",
-		"mootools-express":">=1.4.1",
-		"socket.io":">=0.8.7",
-		"optimist":">=0.3.1",
-		"express":">=2.5.9",
-		"ejs":">=0.6.1"
+		"discord-engine":"0.4.0",
+		"mootools-express":"1.4.1",
+		"socket.io":"0.9.13",
+		"optimist":"0.3.1",
+		"express":"3.0.6",
+		"express-partials":">=0",
+		"ejs":"0.6.1"
 	},
 	"author": {
 		"name": "Michelle Steigerwalt",
